[gd_scene load_steps=5 format=3 uid="uid://dm4eawfdrbllc"]

[ext_resource type="Script" uid="uid://c5x8w4wnhwrrb" path="res://Code/pickable_item.gd" id="1_mvb1n"]
[ext_resource type="Material" uid="uid://bb5a5krai0jpw" path="res://Shaders/outline2.tres" id="1_osgsb"]
[ext_resource type="Texture2D" uid="uid://ce1ecl40ovuiw" path="res://Assets/Sprites/Weapons/giwera.png" id="2_osgsb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_osgsb"]
radius = 18.0

[node name="pickable_item" type="Area2D" node_paths=PackedStringArray("active_sprite", "collider")]
scale = Vector2(0.5, 0.5)
collision_layer = 512
collision_mask = 8
script = ExtResource("1_mvb1n")
item_1_size = Vector2i(4, 4)
outline_shader = ExtResource("1_osgsb")
active_sprite = NodePath("Sprite2D")
collider = NodePath("CollisionShape2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -2.14326
texture = ExtResource("2_osgsb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_osgsb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
